--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
 
 </head>
 <body>
+<div class="jumbotron">
+<h1>Guess what letter I am thinking of</h1>
+</div>
+
+     <div id="game">
+          <ul class="list-group">
+            <li class="list-group-item"><p id="wins">Wins: </p></li>
+            <li class="list-group-item"><p id="losses">Losses: </p></li>
+            <li class="list-group-item"><p id="guessesLeft">Guesses Left: 9</p></li>
+            <li class="list-group-item"><p id="guessedLetters">Your Guesses so far: </p></li>
+          </ul>  
+        </div>
 
 
 
-<script src="./assets/javaScript.js"></script>
+<script src="./assets/script.js"></script>
 	
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
