--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul class="list-group">
             <li class="list-group-item"><p id="wins">Wins: </p></li>
             <li class="list-group-item"><p id="losses">Losses: </p></li>
-            <li class="list-group-item"><p id="guessesLeft">Guesses Left: 9</p></li>
+            <li class="list-group-item"><p id="guessesLeft">Guesses Left: </p></li>
             <li class="list-group-item"><p id="guessedLetters">Your Guesses so far: </p></li>
           </ul>  
         </div>
