--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <li class="list-group-item"><p id="losses">Losses: </p></li>
             <li class="list-group-item"><p id="guessesLeft">Guesses Left: </p></li>
             <li class="list-group-item"><p id="guessedLetters">Your Guesses so far: </p></li>
-          </ul>  
+          </ul> 
+          <!-- <p><span class="reset"><button type="button" class="btn">Reset</button></span></p> -->
         </div>
 
 
